<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="vn.ailatrieuphu.ailatrieuphu.myaap.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="vn.ailatrieuphu.ailatrieuphu.myaap.ui.gallery.GalleryFragment"
        android:label="@string/menu_chondoithu"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="vn.ailatrieuphu.ailatrieuphu.myaap.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_tinthachdau"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_tools"
        android:name="vn.ailatrieuphu.ailatrieuphu.myaap.ui.tools.ToolsFragment"
        android:label="@string/menu_bangxephang"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="vn.ailatrieuphu.ailatrieuphu.myaap.ui.share.ShareFragment"
        android:label="@string/menu_tuychinh"
        tools:layout="@layout/fragment_share" />


</navigation>